--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+!/node_modules
+/node_modules/*
+!/node_modules/psn-api
+
 # Logs
 logs
 *.log
@@ -39,7 +43,7 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
+# node_modules/
 jspm_packages/
 
 # Snowpack dependency directory (https://snowpack.dev/)
